--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
         uses: ./.github/actions/cached-deps
         with:
           caching: 'true'
+      - name: Output information
+        run: echo "Cache used? ${{ steps.load.outputs.used-cache }}"
       - name: Lint code
         run: npm run lint
   test:
