--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Get Aws permissions
         uses: aws-actions/configure-aws-credentials
         with:
-          role-to-assume: arn:aws:iam::450226343468:role/GitHubDemo1
+          role-to-assume: arn:aws:iam::450226343468:role/GitHubDemo1@v1
           aws-region: us-east-1
       - name: Deploy site
         id: deploy
